(ui) some fixes

--- a/templates/step-3-attributes.hbs
+++ b/templates/step-3-attributes.hbs
@@ -7,7 +7,7 @@
     <div class="points-tracker">
         <h3>{{localize "DAEMON_WIZARD.Attributes.PointsTitle"}}</h3>
         <div class="points-display {{#if (lt attributePoints.remaining 0)}}overspent{{/if}}">
-            <span>{{attributePoints.remaining}}</span> / {{attributePoints.total}}
+            <span>{{attributePoints.remaining}}</span>
         </div>
     </div>
 
