--- a/templates/step-5-pericias.hbs
+++ b/templates/step-5-pericias.hbs
@@ -7,7 +7,7 @@
     <div class="points-tracker">
         <h3>{{localize "DAEMON_WIZARD.Pericias.PointsTitle"}}</h3>
         <div class="points-display {{#if (lt periciaPoints.remaining 0)}}overspent{{/if}}">
-            <span>{{periciaPoints.remaining}}</span> / {{periciaPoints.total}}
+            <span>{{periciaPoints.remaining}}</span>
         </div>
     </div>
 
