feat: add configurable starting points

--- a/templates/step-4-aprimoramentos.hbs
+++ b/templates/step-4-aprimoramentos.hbs
@@ -9,7 +9,7 @@
         <div class="points-display {{#if (lt aprimoramentoPoints.remaining 0)}}overspent{{/if}}">
             <span>{{aprimoramentoPoints.remaining}}</span> / {{aprimoramentoPoints.available}}
         </div>
-        <small>Base: {{aprimoramentoPoints.base}} + Desvantagens: {{aprimoramentoPoints.fromDisadvantages}}</small>
+        <small>Base: {{aprimoramentoPoints.base}} + Desvantagens: {{aprimoramentoPoints.fromDisadvantages}} / {{aprimoramentoPoints.maxDisadvantages}}</small>
     </div>
 
     <div class="aprimoramentos-container">
